; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Iter.c_Range_New.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Iter.c_Range_New.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Range = type { i32 }

@Int = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Range*, %struct.Range*)* @Range_New to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Range_New(%struct.Range* %0, %struct.Range* %1) #0 {
  %3 = alloca %struct.Range*, align 8
  %4 = alloca %struct.Range*, align 8
  %5 = alloca %struct.Range*, align 8
  store %struct.Range* %0, %struct.Range** %3, align 8
  store %struct.Range* %1, %struct.Range** %4, align 8
  %6 = load %struct.Range*, %struct.Range** %3, align 8
  store %struct.Range* %6, %struct.Range** %5, align 8
  %7 = load i32, i32* @Int, align 4
  %8 = call i32 @new(i32 %7)
  %9 = load %struct.Range*, %struct.Range** %5, align 8
  %10 = getelementptr inbounds %struct.Range, %struct.Range* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.Range*, %struct.Range** %3, align 8
  %12 = load %struct.Range*, %struct.Range** %4, align 8
  %13 = call i32 @range_stack(%struct.Range* %11, %struct.Range* %12)
  ret void
}

declare dso_local i32 @new(i32) #1

declare dso_local i32 @range_stack(%struct.Range*, %struct.Range*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
